Fixed bug #43344 (Wrong error message for undefined namespace constant)