Zend/zend_vm_def.h
@@ -2684,6 +2684,9 @@ ZEND_VM_HANDLER(99, ZEND_FETCH_CONSTANT, VAR|CONST|UNUSED, CONST)
 
 	if (OP1_TYPE == IS_UNUSED) {
 		if (!zend_get_constant(Z_STRVAL(opline->op2.u.constant), Z_STRLEN(opline->op2.u.constant), &EX_T(opline->result.u.var).tmp_var TSRMLS_CC)) {
+			if (opline->extended_value & ZEND_FETCH_CLASS_RT_NS_CHECK) {
+				zend_error_noreturn(E_ERROR, "Undefined constant '%s'", Z_STRVAL(opline->op2.u.constant));
+			}
 			zend_error(E_NOTICE, "Use of undefined constant %s - assumed '%s'",
 				Z_STRVAL(opline->op2.u.constant),
 				Z_STRVAL(opline->op2.u.constant));
@@ -2707,7 +2710,9 @@ ZEND_VM_HANDLER(99, ZEND_FETCH_CONSTANT, VAR|CONST|UNUSED, CONST)
 				zval_copy_ctor(&EX_T(opline->result.u.var).tmp_var);
 				ZEND_VM_NEXT_OPCODE();
 			} else if ((opline->extended_value & IS_CONSTANT_RT_NS_CHECK) != 0) {
-				if (!zend_get_constant(Z_STRVAL(opline->op2.u.constant), Z_STRLEN(opline->op2.u.constant), &EX_T(opline->result.u.var).tmp_var TSRMLS_CC)) {
+				if (opline->extended_value & ZEND_FETCH_CLASS_RT_NS_CHECK) {
+					zend_error_noreturn(E_ERROR, "Undefined constant '%s::%s'", Z_STRVAL(opline->op1.u.constant), Z_STRVAL(opline->op2.u.constant));
+				} else if (!zend_get_constant(Z_STRVAL(opline->op2.u.constant), Z_STRLEN(opline->op2.u.constant), &EX_T(opline->result.u.var).tmp_var TSRMLS_CC)) {
 					zend_error(E_NOTICE, "Use of undefined constant %s - assumed '%s'",
 						Z_STRVAL(opline->op2.u.constant),
 						Z_STRVAL(opline->op2.u.constant));
