Zend/tests/lsb_018.phpt
@@ -93,3 +93,41 @@ object(Baz)#%d (1) {
   int(2)
 }
 ===DONE===
+--UEXPECTF--
+object(Foo)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(0)
+}
+object(Bar)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(1)
+}
+object(Baz)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(2)
+}
+object(Foo)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(0)
+}
+object(Bar)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(1)
+}
+object(Baz)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(2)
+}
+object(Foo)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(0)
+}
+object(Bar)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(1)
+}
+object(Baz)#%d (1) {
+  [u"instanceId":u"Singleton":private]=>
+  int(2)
+}
+===DONE===
